2006-05-25  David Reveman  <davidr@novell.com>

	* src/window.c (moveResizeWindow): Don't adjust position for NorthWest
	gravity. (bnc 178765) (fdo #6992)

	* plugins/compiz.schemas.in.in:
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/display.c: Add maximize_window_horizontally,
	maximize_window_vertically, toggle_window_maximized,
	toggle_window_maximized_horizontally,
	toggle_window_maximized_vertically.

	* src/event.c (handleEvent): Track changes to maximizeWindow function.

	* plugins/move.c (moveHandleMotionEvent): Make sure we have a saved
	width before we use it. Track changes to maximizeWindow function.

	* plugins/wobbly.c (wobblyHandleEvent): Handle the case where
	window is not both vertically and horizontally maximized better.

	* include/compiz.h: Add MAXIMIZE_STATE macro.

	* include/compiz.h:
	* src/window.c: Remove unmaximizeWindow and make maximizeWindow
	take a state mask so it can be used for both maximizing and
	unmaximizing.

	* plugins/switcher.c: Don't add windows that appear after the switcher
	is popped up. (bnc 178350)
	(switchWindowRemove): Don't create a new list. Instead remove
	window from the existing list and make sure we're positioned
	correctly.

2006-05-24  David Reveman  <davidr@novell.com>

	* plugins/scale.c (scaleMoveFocusWindow): When moving to window on
	left, make sure the window we're moving to is completely left of
	currently selected window. And same thing when moving to window on
	right, top, bottom.
	 (layoutThumbs): Set slot->x2 and slot->y2 correctly. (bnc 178216)

2006-05-23  David Reveman  <davidr@novell.com>

	* plugins/water.c: GL_UNSIGNED_INT_8_8_8_8_REV as pixel data type on
	MSBFirst machines.

	* src/texture.c: Include config.h before compiz.h so that
	IMAGE_BYTE_ORDER is defined correctly. (bnc 178171)

	* include/compiz.h: Define LSBFirst, MSBFirst, IMAGE_BYTE_ORDER,
	BITMAP_BIT_ORDER. (bnc 178171)

2006-05-23  Dan Winship  <danw@novell.com>
